Add user invite handle
